updated style using bootstrap

--- a/src/index.css
+++ b/src/index.css
@@ -1,48 +1,1 @@
-* {
-  font-family: 'Georgia', Verdana, sans-serif;
-}
-
-body {
-  margin: 0;
-}
-
-.App {
-  display: flex;
-  flex-flow: column;
-  height: 100vh;
-}
-
-footer h4,
-h5 {
-  margin: 0;
-  color: #d2cfc4;
-}
-
-footer {
-  display: flex;
-  padding: 10px 0;
-  flex-direction: column;
-  align-items: center;
-  background: #211b1c;
-}
-
-header {
-  display: flex;
-  padding: 5px;
-  background: #211b1c;
-}
-
-header .logo {
-  border: 3px solid #d2cfc4;
-  margin: 0 20px;
-  padding: 10px;
-}
-
-header .logo h3 {
-  margin: 2px;
-  color: #d2cfc4;
-}
-
-.homepage {
-  flex: 1;
-}
+@import 'bootstrap/dist/css/bootstrap.css';
